Hard-typed api responses
