# strava-backend/src/api-v1/users/users.controller.ts
@@ -1,3 +1,4 @@
+import { User } from "@prisma/client";
 import { Get, Route } from "tsoa";
 import { formatAPIResponse } from "../../helpers/formatAPIResponse";
 import { ApiResponsePaginated } from "../../types/generic/apiResponse";
@@ -7,7 +8,7 @@ import { UsersService } from "./users.service";
 @Route("users")
 export default class UserController {
   @Get("/")
-  public async getAllUsers(): Promise<ApiResponsePaginated> {
+  public async getAllUsers(): Promise<ApiResponsePaginated<User[]>> {
     const data = await new UsersService().getAllUsers({});
 
     return formatAPIResponse(data);
